# TokenPulse-Mini

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup.sh
releases/: README.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: aws_config.rs  azure_config.rs  credentials.rs  env.rs  lib.rs  main.rs  sync.rs
src-tauri/src/adapters/: anthropic.rs  azure.rs  bedrock.rs  gemini.rs  mod.rs  openai.rs  openai_billing.rs  traits.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/engine/: alerts.rs  cost.rs  dashboard.rs  demo.rs  mod.rs
src-tauri/src/models/: mod.rs
src/components/: MiniWidget.tsx  ProgressRing.tsx  ProviderBadge.tsx  Sidebar.tsx  Sparkline.tsx  WidgetDemoToggle.tsx  WindowTitleBar.tsx
src/hooks/: useLiveSync.ts  useWidgetStats.ts  useWindowDrag.ts
src/lib/: api.ts  providers.ts
src/pages/: ApiKeySettings.tsx  BudgetSettings.tsx  Dashboard.tsx  ModelBreakdown.tsx  ModelPricing.tsx  ProviderBreakdown.tsx  UsageHistory.tsx
src/styles/: global.css
src/types/: index.ts
tests/regression/: .env.example  aws_agent.py  openai_agent.py  run_aws.sh  run_openai.sh
