[package]
name = "tokenpulse-mini"
version = "0.1.2"
description = "TokenPulse Mini - AI API usage tracker"
authors = ["TokenPulse"]
edition = "2021"

[lib]
name = "tokenpulse_mini_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
thiserror = "2"
dirs = "6"
